[package]
authors = ["Daniel Brotsky <dev@brotsky.com>"]
description = "Apple-native credential store for keyring"
homepage = "https://github.com/open-source-cooperative/keyring-rs/wiki/Keyring"
keywords = ["keyring", "credential", "protected-data", "keychain"]
license = "MIT OR Apache-2.0"
name = "apple-native-keyring-store"
repository = "https://github.com/open-source-cooperative/apple-native-keyring-store.git"
version = "1.0.0"
rust-version = "1.85"
edition = "2024"
exclude = [".github"]
readme = "README.md"

[features]
keychain = ["security-framework"]
protected = ["security-framework/OSX_10_15"]
biometric = ["objc2", "block2", "objc2-foundation", "objc2-local-authentication"]

[[example]]
name = "operations"
path = "examples/item_operations.rs"
crate-type = ["staticlib"]
required-features = ["protected"]

[[example]]
name = "test"
path = "examples/protected_test.rs"
crate-type = ["staticlib"]
required-features = ["protected"]

[[example]]
name = "biometric"
required-features = ["keychain", "biometric"]

[[example]]
name = "instantiation"

[dependencies]
log = "0.4"

[dependencies.keyring-core]
version = "1"
# path = "../keyring-core"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
security-framework = { version = "3.7", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
block2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true, features = ["NSString", "NSError"] }
objc2-local-authentication = { version = "0.3", optional = true, features = ["LAContext", "LAError", "block2"] }

[dev-dependencies]
fastrand = "2"
env_logger = "0.11"
linkme = "0.3"
sudo = "0.6"

[package.metadata.docs.rs]
targets = ["aarch64-apple-darwin", "aarch64-apple-ios"]
all-features = true
